# amh-recoverability-atlas

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
endocrine/: compute_conditional_nll.py  delta_amh_counterfactual.py  train_conditional_flow_matching.py
experiments/: cka_energy.py  cross_modality_transport.py  crosscohort_transfer.py  info_localization_battery.py  make_figures.py  ovary_flow_matching.py  ovary_image_strengthen.py  ovary_layerwise_patch.py  ovary_ot_ddbm.py  ovary_otcfm.py  ovary_residualize_localization_null.py  pcosgen_dissociation.py
reserve_audit/: README.md  __init__.py  cli.py  quantity_quality.py  recoverability.py  registry.py  sufficiency.py
results/: cka_energy.json  crosscohort_fair.json  image_amh_information_ceiling.json  image_grade_positive.json  info_localization.json  ovary_arm_summary.json  ovary_ddbm_ot.json  ovary_feature_fm.json  ovary_image_strengthen.json  ovary_layerwise_patchloc.json  ovary_otcfm.json  ovary_residualize_locnull.json  pcosgen_dissociation.json
results/diagnostics/: atlas_conditional_probing.json  atlas_conditional_probing_B2000.json  embryo_amh_nonlinear_probe.json  metaanalysis_reml_hksj.json  recoverability_atlas_v2_permhardened.json  reserve_audit_validation.json  sufficiency_tost.json  target_substitution_inflation.json  unified_encoder_benchmark.json
scripts/: hardening_diagnostics.py  make_fig_encoder_benchmark.py  unified_encoder_benchmark.py  verify_benchmark.py
