[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "reserve_audit"
version = "0.1.0"
description = "Target-separated recoverability audit for frozen foundation-model embeddings, demonstrated on AMH in IVF"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = ["numpy", "pandas", "scipy", "scikit-learn"]

[project.urls]
Repository = "https://github.com/youdie006/amh-recoverability-atlas"

[tool.setuptools]
packages = ["reserve_audit"]
